objects/Case_Transfer_Tracking__c.object
<CustomObject>
    <description>RN - CloudSmiths
The objects keeps track of any case ownership changes and the calculated time the case was with a specific owner.</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>RN - CloudSmith</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Transfer Tracking</relationshipLabel>
        <relationshipName>Case_Transfer_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>RN - CloudSmiths
Transferred from user OR Queue</description>
        <inlineHelpText>Transferred from user OR Queue</inlineHelpText>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Service_Type__c</fullName>
        <description>RN - CloudSmiths
Service Type when the case was transferred</description>
        <inlineHelpText>Service Type when the case was transferred</inlineHelpText>
        <label>In Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Status__c</fullName>
        <description>RN - CloudSmimths 
The Case status when a new owner receives the transferred case</description>
        <inlineHelpText>The Case status when a new owner receives the transferred case</inlineHelpText>
        <label>In Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In__c</fullName>
        <description>RN - CloudSmiths 
The date/time the Case was received by the new owner</description>
        <inlineHelpText>The date/time the Case was received by the new owner</inlineHelpText>
        <label>In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Out__c</fullName>
        <description>RN - CloudSmith 
The date/time the Case was transferred to the new owner by the current owner</description>
        <inlineHelpText>The date/time the Case was transferred to the new owner by the current owner</inlineHelpText>
        <label>Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>RN - CloudSmiths
Transferred to user OR Queue</description>
        <inlineHelpText>Transferred to user OR Queue</inlineHelpText>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Days__c</fullName>
        <description>RN - CloudSmiths 
Total time the case was owned by a specific owner in days</description>
        <formula>( Total_Time_Min__c / 60 ) / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total time the case was owned by a specific owner in days</inlineHelpText>
        <label>Total Time (Days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Hrs__c</fullName>
        <description>RN - CloudSmiths 
Total time the case was owned by a specific owner in hours</description>
        <formula>Total_Time_Min__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total time the case was owned by a specific owner in hours</inlineHelpText>
        <label>Total Time (Hrs)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Min__c</fullName>
        <defaultValue>0</defaultValue>
        <description>RN - CloudSmiths
Total time the case was owned by a specific owner in minutes</description>
        <inlineHelpText>Total time the case was owned by a specific owner in minutes</inlineHelpText>
        <label>Total Time (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Transfer Tracking</label>
    <nameField>
        <displayFormat>TRANS-{00000000}</displayFormat>
        <label>Case Transfer Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Transfer Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>